<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginBottom="10dp"
    tools:context=".DetailsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="70dp"
        app:cardBackgroundColor="@color/cardColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:text="@string/almost_there_please_enter_your_phone_number_and_your_name"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/averia_serif_libre_light"
        android:text="@string/please_enter_your_details"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/details_progress"
        android:visibility="gone"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_detail"
        android:layout_marginBottom="15dp"
        android:inputType="textPersonName"
        android:hint="@string/enter_your_name_here"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone_number_detail"
        android:layout_marginBottom="15dp"
        android:inputType="phone"
        android:hint="@string/enter_your_phone_number"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_details"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        android:id="@+id/create_details_button"
        />
    </LinearLayout>

</LinearLayout>