<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listen_track"
        android:text="@string/connection_status"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
<!--this text view should have visibility gone , on click it should be displayed-->
        <ListView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorAccent"
            android:id="@+id/details_devices"/>
        <Button
            android:id="@+id/wifi_on_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_wifi_on"
            android:layout_margin="15dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover"
            android:id="@+id/discover_devices_button"/>


    </LinearLayout>

</LinearLayout>